<resources>
    <string name="app_name">Bysj</string>
    <string name="查询">查询</string>
    <string name="取消">取消</string>
    <string name="搜索">搜索</string>
    <string name="查词">查词</string>
    <string name="复习">复习</string>
    <string name="选词">选词</string>
    <string name="统计">统计</string>
    <string name="设置">设置</string>
    <string name="发现">发现</string>
    <string name="我的词汇量">我的词汇量</string>
    <string name="xyh">&lt;</string>
    <string name="我的收藏">我的收藏</string>
    <string name="注册或登录">注册或登录</string>
    <string name="我的学习计划">我的学习计划</string>
    <string name="text1">请把英文发音和中文解释说出口</string>
    <string name="text2">"点击屏幕显示答案"</string>
    <string name="退出登录">"退出登录"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_theme_apk">ThemeApkActivity</string>
    <string name="title_activity_theme">ThemeActivity</string>
</resources>
