<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MergeRootFrame"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:textColor="#000000"
            android:id="@+id/button_fuxi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:text="@string/复习" />
        <Button
            android:id="@+id/button_faxian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_gravity="bottom"
            android:text="@string/发现" />
        <Button
            android:id="@+id/button_tongji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:text="@string/统计" />
        <Button
            android:id="@+id/button_shangcheng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_gravity="bottom"
            android:text="商城" />
        <Button
            android:id="@+id/button_shezhi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_gravity="bottom"
            android:text="我的" />

    </LinearLayout>

</LinearLayout>