<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="个人中心"
            android:textColor="#990055"
            android:textSize="40dp"
            android:gravity="center">
        </TextView>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:layout_weight="1"
                android:id="@+id/button_user_register"
                android:layout_width="match_parent"
                android:layout_height="0dp"

                android:text="@string/注册或登录"
                />
            <Button
                android:layout_weight="1"
                android:id="@+id/button_user_plan"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/我的学习计划"
                />
            <Button
                android:layout_weight="1"
                android:id="@+id/button_user_shoucang"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/我的收藏"
                />
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <Button
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="我的词汇量">

                </Button>
                <TextView
                    android:id="@+id/tv_cihuiliang_user"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="150"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <Button
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="我的星币">

                </Button>
                <TextView
                    android:id="@+id/tv_coin_over_user"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="150"></TextView>
            </LinearLayout>
            <Button
                android:layout_weight="1"
                android:id="@+id/button_user_task"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="每日任务"
                />
            <Button
                android:layout_weight="1"
                android:id="@+id/button_user_zhenti"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="历年真题"
                />
            <Button
                android:layout_weight="1"
                android:id="@+id/button_user_fenxiang"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="分享APP"
                />
            <Button
                android:layout_weight="1"
                android:id="@+id/button_user_guanyu"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="关于"
                />
            <Button
                android:layout_weight="1"
                android:id="@+id/button_user_yonghuxieyi"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="用户协议"
                />
            <Button
                android:layout_weight="1"
                android:id="@+id/button_user_help"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="帮助或反馈"
                />
<!--            <Button-->
<!--                android:layout_weight="1"-->
<!--                android:id="@+id/button_user_more"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="0dp"-->
<!--                android:text="更多"-->
<!--                />-->
            <Button
                android:layout_weight="1"
                android:id="@+id/button_user_exit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="退出APP"
                />
        </LinearLayout>
    </ScrollView>



</LinearLayout>